styles/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* Catppuccin mocha colorscheme */

  /* Main colors */
  --background: #eff1f5;
  --text: #4c4f69;
  --subtext0: #6c6f85;
  --subtext1: #5c5f77;
  --surface0: #ccd0da;
  --surface1: #bcc0cc;

  /* Shadows */
  --shadow0: inset 5px 5px 10px #cbcdd0, inset -5px -5px 10px #ffffff;
  --shadow00: inset 10px 10px 10px #cbcdd0, inset -10px -10px 10px #ffffff;
  --shadow1: inset -5px -5px 10px #cbcdd0, inset 3px 3px 10px #ffffff;
  --shadow1-sm: inset -5px -5px 5px #cbcdd0, inset -2px -2px 5px #e3e3e3;

  /* Extra colors */
  --yellow: #f5df1b;
  --blue: #1e66f5;
  --sky: #04a5e5;
  --sapphire: #209fb5;
  --lavender: #7287fd;

  color: var(--text);
}

body.dark {
  /* Catppuccin latte colorscheme */

  /* Main colors */

  --background: #1e1e2e;
  --mantle: #181825;
  --text: #cdd6f4;
  --subtext0: #a6adc8;
  --subtext1: #bac2de;
  --surface0: #313244;
  --surface1: #45475a;

  /* Shadows */
  --shadow0: inset 5px 5px 10px var(--mantle),
    inset -5px -5px 10px var(--surface0);
  --shadow00: inset 10px 10px 10px var(--mantle),
    inset -10px -10px 10px var(--surface0);
  --shadow1: inset -5px -5px 10px var(--mantle),
    inset 3px 3px 10px var(--surface0);
  --shadow1-sm: inset -5px -5px 5px var(--mantle),
    inset -2px -2px 5px var(--surface0);

  /* Extra colors */
  --yellow: #f9e2af;
  --blue: #89b4fa;
  --sky: #89dceb;
  --sapphire: #74c7ec;
  --lavender: #b4befe;

  color: var(--text);
}

*::-webkit-scrollbar {
  display: none;
}

body {
  @apply p-1.5 flex flex-col items-center justify-center md:overflow-y-hidden;
  background-color: var(--background);
}

.indexLayout {
  @apply grid max-w-7xl;
  grid-template-columns: 1.2fr 2fr;
}

.indexLayout > * {
  background: red;
}

.indexLayout > section {
  @apply flex p-2;
  /* box-shadow: var(--shadow0); */
  background-color: var(--background);
}

.topbar {
  @apply col-span-2 flex flex-row w-full justify-end items-end;
}

.pill {
  @apply flex flex-row p-2 rounded-full gap-1;
  box-shadow: var(--shadow1);
}

.pill > button,
.pill > a,
.topbarButton {
  @apply p-2 size-10 rounded-full duration-200 flex flex-col align-middle justify-center items-center;
}

.pill > button:hover,
.pill > a:hover {
  @apply duration-200;
  box-shadow: var(--shadow0);
}

.active {
  border: 2px solid var(--surface0);
  box-shadow: var(--shadow0);
}

.info {
  @apply flex flex-col gap-4 h-full;
}

.info > * {
  height: -webkit-fill-available;
}

.aboutMe {
  @apply rounded-3xl p-2;
  background: var(--background);
  box-shadow: var(--shadow1);
}

.avatar {
  @apply flex flex-row justify-center items-center p-2;
}

.avatar > img {
  @apply rounded-full inline-block;
}

.details {
  @apply ml-2 text-left;
}

.details > h1 {
  @apply inline text-2xl;
  color: var(--text);
}

.details > p {
  color: var(--subtext0);
}

/* .aboutMe > .socialButtons */
.socialButtons {
  @apply flex flex-row justify-center items-center p-4;
}

.socialButtons > a {
  @apply inline-block text-2xl rounded-full p-2 ml-2 mr-2 duration-150;
  background-color: var(--background);
  box-shadow: var(--shadow0);
}

.socialButtons > a:hover {
  box-shadow: var(--shadow00);
}

.description {
  @apply rounded-3xl p-7 mt-1.5;
  box-shadow: var(--shadow1);
}

.description > h2 {
  @apply text-left font-semibold;
}

.description > p {
  @apply text-sm text-pretty;
}

.skills {
  @apply rounded-3xl p-4 py-3.5 mt-1.5 flex flex-col justify-center;
  background: var(--background);
  box-shadow: var(--shadow1);
}

.skills > h3 {
  @apply text-lg text-left font-semibold ml-2;
}

.skillsIcons {
  @apply grid grid-cols-7 gap-3 mt-2;
}

.skillIcon {
  @apply rounded-xl p-2 relative flex flex-col items-center;
  background-color: var(--background);
}

.group:hover .skillTooltip {
  @apply block;
}

.skillTooltip {
  @apply absolute -top-8 text-center bg-opacity-100 hidden rounded-md p-1 mb-4;
  background-color: var(--surface0);
}

.projectSection {
  @apply flex flex-col;
}

.projectSectionSelector {
  @apply relative flex flex-row gap-4 justify-center items-center p-3 rounded-full;
  box-shadow: var(--shadow1);
}
.projectSectionSelector > button {
  @apply p-2 rounded-full w-[50%];
  --btn-shadow: none;
  box-shadow: var(--btn-shadow);
  transition-duration: 0.2s;
}
.projectSectionSelector > button:hover {
  --btn-shadow: var(--shadow1);
}
.projectSectionSelector > button.active {
  border: none;
  --btn-shadow: var(--shadow0);
}

.projectsTitle {
  @apply text-center text-lg;
}

.projectsContainer {
  @apply relative grid-cols-2 p-4 mt-1.5 gap-4 hidden rounded-3xl h-[31rem];
  overflow-y: scroll;
  box-shadow: var(--shadow1);
}

.projectsContainer > p {
  @apply flex flex-col col-span-2 row-span-2 justify-center items-center;
}

.activePage {
  display: grid;
}

.project {
  @apply rounded-xl p-2 duration-200 h-min;
  box-shadow: var(--shadow0);
}

.project:hover {
  box-shadow: var(--shadow00);
}

.projectInfo {
  @apply flex flex-row;
}

.projectInfo > img {
  @apply rounded-md size-20;
}

.projectText {
  @apply mx-3;
}

.projectText > h3 {
  @apply text-lg;
}

.projectText > p {
  @apply text-sm;
  color: var(--subtext0);
}

.projectIcons {
  @apply flex flex-row my-1.5 gap-1.5;
}

.projectIcon {
  @apply rounded-xl p-0.5;
  box-shadow: var(--shadow0);
}

@media only screen and (max-width: 600px) {
  .indexLayout {
    @apply flex flex-col;
    grid-template-rows: 0.2fr 2fr 3fr;
  }

  .topbar {
    @apply col-span-1 row-span-1;
  }

  .description > p {
    @apply text-wrap;
  }

  .aboutMe {
    @apply col-span-1 row-span-2;
  }
}

@media only screen and (max-width: 1000px) {
  .socialButtons > a {
    @apply inline-block text-2xl  p-1.5 mx-2 duration-150;
    background-color: var(--background);
    box-shadow: var(--shadow1);
  }

  .projectsContainer {
    @apply grid-cols-1 p-3.5 min-h-[20vh];
  }
}

.icon {
  @apply size-8 flex justify-center items-center p-1;
}

